--- a/styles/style.scss
+++ b/styles/style.scss
@@ -38,6 +38,7 @@ img{
     .showcase-top{
         position: relative;
         height: 90px;
+        z-index: 2;
         img{
             width: 170px;
             position: absolute;
@@ -52,6 +53,43 @@ img{
             transform: translate(-50%, -50%);
         }
     }
+    .showcase-content{
+        position: relative;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-top: 8rem;
+        z-index: 2;
+        h1{
+            font-weight: 700;
+            font-size: 5.2rem;
+            line-height: 1.1;
+            margin: 0 0 2rem;
+        }
+        p{
+            text-transform: uppercase;
+            color: #fff;
+            font-weight: 400;
+            font-size: 1.9rem;
+            line-height: 1.25;
+            margin: 0 0 2rem;
+        }
+    }
+    &::after{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background: rgba(0,0,0,0.6);
+        box-shadow: inset 120px 100px 250px #000, inset -120px -100px 250px #000;
+    }
+    
 }
 
 /*Buttons*/
