--- a/styles/style.css
+++ b/styles/style.css
@@ -216,6 +216,29 @@ img {
   text-align: left;
 }
 
+/*Footer*/
+.footer {
+  max-width: 75%;
+  margin: 1rem auto;
+  overflow: auto;
+}
+.footer p {
+  margin-bottom: 1.5rem;
+}
+.footer .footer-cols {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+}
+.footer li {
+  line-height: 1.9;
+}
+
+.footer, .footer a {
+  color: #999;
+  font-size: 0.9rem;
+}
+
 /*Container*/
 .container {
   max-width: 70%;
@@ -246,4 +269,22 @@ img {
 .text-md {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+}
+
+@media (max-width: 960px) {
+  .showcase {
+    height: 70vh;
+  }
+  .hide-sm {
+    display: none;
+  }
+  .showcase-top img {
+    top: 30%;
+    left: 5%;
+    transform: translate(0);
+  }
+  .showcase-content h1 {
+    font-size: 3.7rem;
+    line-height: 1;
+  }
 }/*# sourceMappingURL=style.css.map */
