--- a/styles/style.scss
+++ b/styles/style.scss
@@ -227,6 +227,30 @@ img{
     }
 }
 
+/*Footer*/
+
+.footer{
+    max-width: 75%;
+    margin:1rem auto;
+    overflow: auto;
+    p{
+        margin-bottom: 1.5rem;
+    }
+    .footer-cols{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 2rem;
+    }
+    li{
+        line-height: 1.9;
+    }
+}
+
+.footer, .footer a{
+    color:#999;
+    font-size: 0.9rem;
+}
+
 /*Container*/
 
 .container{
@@ -258,4 +282,26 @@ img{
 .text-md{
     font-size: 1.5rem;
     margin-bottom: 1rem;
+}
+
+@media (max-width: 960px) {
+    .showcase{
+        height: 70vh;
+    }
+    .hide-sm{
+        display: none;
+    }
+    .showcase-top {
+        img{
+            top:30%;
+            left: 5%;
+            transform: translate(0);
+        }
+    }
+    .showcase-content{
+        h1{
+            font-size: 3.7rem;
+            line-height: 1;
+        }
+    }
 }
