--- a/styles/style.css
+++ b/styles/style.css
@@ -169,6 +169,17 @@ img {
   color: #fff;
 }
 
+/*Hide content initially*/
+#tab-1-content,
+#tab-2-content,
+#tab-3-content {
+  display: none;
+}
+
+.show {
+  display: block !important;
+}
+
 #tab-1-content .tab-1-content-inner {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -269,6 +280,10 @@ img {
 .text-md {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+}
+
+.btn-icon {
+  margin-left: 1rem;
 }
 
 @media (max-width: 960px) {
