--- a/styles/style.scss
+++ b/styles/style.scss
@@ -167,6 +167,17 @@ img{
     color: #fff;
 }
 
+/*Hide content initially*/
+#tab-1-content,
+#tab-2-content,
+#tab-3-content{
+    display: none;
+}
+
+.show{
+    display: block !important;
+}
+
 #tab-1-content{
 
     .tab-1-content-inner{
@@ -282,6 +293,10 @@ img{
 .text-md{
     font-size: 1.5rem;
     margin-bottom: 1rem;
+}
+
+.btn-icon{
+    margin-left: 1rem;
 }
 
 @media (max-width: 960px) {
