--- a/styles/style.scss
+++ b/styles/style.scss
@@ -196,6 +196,9 @@ img{
         gap: 1rem;
         justify-content: center;
         text-align: center;
+        a{
+            height: 50%;
+        }
     }
     .tab-2-content-bottom{
         margin-top: 2rem;
